--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Huh?</title>
-    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="data:,">
     <style>
       /* Reset */
       html, body, h1, p, a, img { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
